--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/main.css">
 
 </head>
 
 <body>
+
+<div class="mobile-menu">
+
+</div>
 
 <header>
   <div class="container">
@@ -42,11 +47,11 @@
       </div>
       <div class="col-12 col-md-6 d-none d-md-flex flex-wrap">
         <ul class="menu">
-          <li><a href="#" class="go_to">Principal</a></li>
-          <li><a href="#" class="go_to">Sobre Nosotros</a></li>
-          <li><a href="#" class="go_to">Envío</a></li>
-          <li><a href="#" class="go_to">Contáctenos</a></li>
-          <li><a href="#" class="go_to">Oferta</a></li>
+          <li><a href="#">Principal</a></li>
+          <li><a href="#">Sobre Nosotros</a></li>
+          <li><a href="#">Envío</a></li>
+          <li><a href="#">Contáctenos</a></li>
+          <li><a href="#">Oferta</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-6 d-flex d-sm-none">
@@ -582,20 +587,20 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-12 col-md-6 col-lg-2 offset-lg-2">
+      <div class="col-12 col-md-6 col-lg-4 col-xl-2 offset-xl-2">
         <div class="stages-orders-box">
           <div class="stages-orders-box__icon"><img src="img/mail.svg" alt=""></div>
           <p>Complete el formulario re orden más abajo</p>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-2 offset-lg-1">
+      <div class="col-12 col-md-6 col-lg-4 col-xl-2 offset-xl-1">
         <div class="stages-orders-box">
           <div class="stages-orders-box__icon"><img src="img/phone.svg" alt=""></div>
           <p>Espre la llamada de nuestro operador para confirmar la orden</p>
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-2 offset-lg-1">
+      <div class="col-12 col-md-6 col-lg-4 col-xl-2 offset-xl-1">
         <div class="stages-orders-box">
           <div class="stages-orders-box__icon"><img src="img/delivery.svg" alt=""></div>
           <p>¡Trabajamos sin pago anticipado! Usted paga su orden solamente cuando la recibe</p>
@@ -723,9 +728,9 @@
 </footer>
 
 <script src="js/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/common.js"></script>
 
 </body>
