--- a/app/index.html
+++ b/app/index.html
@@ -191,7 +191,7 @@
   </div>
 </section>
 
-<section class="about-product">
+<section class="about-product p-120">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -239,7 +239,7 @@
   </div>
 </section>
 
-<section class="technology">
+<section class="technology p-120">
   <div class="container">
     <div class="row">
       <div class="col-12 col-lg-4">
@@ -444,11 +444,11 @@
           <h3>Rocío Olmedo</h3>
           <div class="result-box-images">
             <div class="result-box-images__img">
-              <div class="img img-after"><img src="img/result1.jpeg" alt=""></div>
+              <div class="img img-after"><img src="img/result2.jpeg" alt=""></div>
               <p>Antes</p>
             </div>
             <div class="result-box-images__img">
-              <div class="img"><img src="img/result1.jpeg" alt=""></div>
+              <div class="img"><img src="img/result2.jpeg" alt=""></div>
               <p>31 días después</p>
             </div>
           </div>
