--- a/app/index.html
+++ b/app/index.html
@@ -32,20 +32,32 @@
 <body>
 
 <div class="mobile-menu">
-
+  <ul class="menu">
+    <li><a href="#">Principal</a></li>
+    <li><a href="#">Sobre Nosotros</a></li>
+    <li><a href="#">Envío</a></li>
+    <li><a href="#">Contáctenos</a></li>
+    <li><a href="#">Oferta</a></li>
+  </ul>
+  <div class="location">
+    <div class="location-icon"><img src="img/location.svg" alt=""></div>
+    <div class="location-text">Perú</div>
+  </div>
 </div>
+
+<div class="overlay"></div>
 
 <header>
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-12 col-md-6 d-flex align-items-center flex-wrap">
+      <div class="col-6 col-md-4 d-flex align-items-center flex-wrap">
         <a href="index.html" class="logo"><img src="img/logo.svg" alt=""></a>
         <div class="location">
           <div class="location-icon"><img src="img/location.svg" alt=""></div>
           <div class="location-text">Perú</div>
         </div>
       </div>
-      <div class="col-12 col-md-6 d-none d-md-flex flex-wrap">
+      <div class="col-12 col-md-8 d-none d-md-flex flex-wrap">
         <ul class="menu">
           <li><a href="#">Principal</a></li>
           <li><a href="#">Sobre Nosotros</a></li>
@@ -54,7 +66,7 @@
           <li><a href="#">Oferta</a></li>
         </ul>
       </div>
-      <div class="col-12 col-md-6 d-flex d-sm-none">
+      <div class="col-6 col-md-6 d-flex d-md-none">
         <div class="btn-burger"></div>
       </div>
     </div>
